# ScreenCapture-by-Qt

./: .gitignore  .qmake.stash  CMakeLists.txt  LICENSE.txt  Makefile  Makefile.Debug  Makefile.Release  README.md  ScreenCaptureTool.pro  ScreenCaptureTool_resource.rc  mainwindow.h  mainwindow.ui  resources.qrc  ui_mainwindow.h
resources/: icons.qrc
src/: main.cpp  mainwindow.cpp  screencapturer.cpp  screencapturer.h
ui/: screencapturer.ui
